--- a/index.html
+++ b/index.html
@@ -7,22 +7,13 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="Css/Style.css">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css">
 
 
-		<title>Un site au pif</title>
+		<title>Documentaire les loups dans le monde</title>
 
-	
-
-	</head>
-
-
-<body>
-
-	<header>
-		
-		<div class="container">
+		<div class="container espace-navbar">
 
 			<nav class="navbar navbar-inverse navbar-fixed-top">
 
@@ -42,7 +33,7 @@
 
 						</button>
 
-		      			<a class="navbar-brand" href="#">CV en ligne Julien Febvre</a>
+		      			<a class="navbar-brand" href="#">Les loups dans le monde</a>
 
 		    		</div>
 
@@ -52,9 +43,9 @@
 
 					        <li><a href="#">Home</a></li>
 
-					        <li><a href="#competence">Compétences</a></li> <!-- id="competence" -->
+					        <li><a href="#intro">Introduction</a></li> <!-- id="intro" -->
 
-					        <li><a href="#about">A propos de moi</a></li> <!-- id="about" -->
+					        <li><a href="#about">A propos</a></li> <!-- id="about" -->
 
 					        <li><a href="#contacter">Contact</a></li> <!-- id="contacter" -->
 
@@ -68,10 +59,39 @@
 
 		</div>
 
+	</head>
+
+
+<body>
+
+	<header>
+
+		<div class="container">
+		
+			<div class="row">
+
+				<div class="col-md-12">
+
+					<div class="row">
+
+						<div class="col-md-6 col-md-push-3">
+
+							<h1>Les loups</h1>
+
+						</div>
+
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+		
 	</header>
 
 
-	
+
 
 </body>
 </html>
