premiers pas sur introduction

--- a/index.html
+++ b/index.html
@@ -76,7 +76,24 @@
 
 						<div class="col-md-6 col-md-push-3">
 
-							<h1>Les loups</h1>
+							<h1 class="page-header page-header">Les loups</h1>
+
+						</div>
+
+					</div>
+
+
+					<div class="row">
+
+						<div class="col-md-12">
+
+							<img class="image-loup-intro" src="https://lehurlementdesloups.files.wordpress.com/2013/08/4.jpg">
+
+							<!-- introduction des loups -->
+
+							<h2>Introduction</h2>
+
+							<p>les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups </p>
 
 						</div>
 
