ajout typo et intro ( pas finit )

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css">
+		<link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet"> 
 
 
 		<title>Documentaire les loups dans le monde</title>
@@ -93,7 +94,18 @@
 
 							<h2>Introduction</h2>
 
-							<p>les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups les loups </p>
+							<p>Le loup commun varie du noir au blanc avec toute la gamme des intermédiaires gris, fauve et roux.
+
+Il est le plus grand des canidés sauvages, famille zoologique qui regroupe entre autres les chacals, le coyote, les renards, le dingo et les chiens (15 genres et 33 espèces). <br><br>
+
+C’est une espèce qui présente une importante distribution géographique : on la retrouve sur tout l’Hémisphère Nord depuis la péninsule arabique jusque dans l’arctique, sous des climats tempérés où très froids, aussi bien dans les toundras et steppes que dans les taïgas et les régions désertiques. Sa taille, son poids et certains aspects morphologiques peuvent, de ce fait, varier fortement du nord au sud de son aire de répartition. Le fait de côtoyer des environnements très variés a ainsi entraîné des adaptations morphologiques et physiques spécifiques : gabarit, couleur du pelage, dimensions des appendices.<br>
+A 75° de latitude nord sur l’île d’Ellesmere, Canis lupus arctos atteint le poids de 65kg voire 70kg pour les plus gros mâles alors que plus au sud, en Arabie, Canis lupus arabs ne pèse que 14 à 25kg selon les individus.<br><br>
+
+Il y a de nos jours environ 2000 loups en Espagne, principalement dans les provinces de Castille et Léon, Zamora, les Asturies et les Monts Cantabriques. Il y a entre 200 et 300 dans le nord du Portugal. En Italie, une population de 800 / 1000 loups subsiste du nord au sud de la « botte », allant du Piémont jusqu’en Calabre, pays traversé par la chaîne montagneuse des Apennins. Des populations de loups existent dans tous les pays d’Europe centrale. Actuellement on note environ 3000 loups en Roumanie, 600 / 700 en Pologne, 800 à 1000 en Bulgarie et moins de 300 en Grèce.<br>
+C’est l’ex-URSS qui abriterait le plus grand nombre de loups. Il y en aurait actuellement plus de cent mille dans cet ensemble de pays, où cependant ils ont été beaucoup chassés. Vu la superficie couverte par la population lupine et les moyens sur le terrain, il est évident qu’il est difficile de fournir une estimation réelle des effectifs de loups.<br>
+En Finlande, plus précisément en Laponie finlandaise limitrophe de la Russie, on enregistre des fluctuations de populations chez ces prédateurs, ils seraient environ 150.<br>
+En Turquie, en Iran, en Afghanistan, les loups sont très nombreux, de même qu’en Chine et en Mongolie extérieure. Il y a encore des loups en Israël, Arabie Saoudite et au Groenland où subsistent des loups, mais en petit nombre.<br>
+Aux Etats-Unis dans les états du Michigan, du Minnesota et du Wisconsin, vivent près de 3500 loups (Minnesota 3000, Michigan 180, Wisconsin 200). Le Canada fait partie des grands réservoirs à loups de la planète. Les derniers recensements font ressortir une population se situant entre 60 000 et 70 000 pour l’Amérique du Nord. Suivant les sources scientifiques, il y aurait entre 200 000 et 300 000 loups sur la planète, mais uniquement dans l’hémisphère nord pour « Canis lupus ».</p>
 
 						</div>
 
