ajout dossier image dossier css modif bootstrap et ajout backgroundbody

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="style.css">
+		<link rel="stylesheet" type="text/css" href="./css/style.css">
 		<link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css">
-		<link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet"> 
+		<link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet">
 
 
 		<title>Documentaire les loups dans le monde</title>
@@ -68,7 +68,7 @@
 	<header>
 
 		<div class="container">
-		
+
 			<div class="row">
 
 				<div class="col-md-12">
@@ -88,13 +88,13 @@
 
 						<div class="col-md-12">
 
-							<img class="image-loup-intro" src="https://lehurlementdesloups.files.wordpress.com/2013/08/4.jpg">
+							<img class="image-loup-intro pull-left" width="auto" height="300" src="https://lehurlementdesloups.files.wordpress.com/2013/08/4.jpg">
 
 							<!-- introduction des loups -->
 
-							<h2>Introduction</h2>
+							<h2 class="text-center text-justify intro">Introduction</h2>
 
-							<p>Le loup commun varie du noir au blanc avec toute la gamme des intermédiaires gris, fauve et roux.
+							<p class="text-center text-justify intro">Le loup commun varie du noir au blanc avec toute la gamme des intermédiaires gris, fauve et roux.
 
 Il est le plus grand des canidés sauvages, famille zoologique qui regroupe entre autres les chacals, le coyote, les renards, le dingo et les chiens (15 genres et 33 espèces). <br><br>
 
@@ -116,7 +116,7 @@ Aux Etats-Unis dans les états du Michigan, du Minnesota et du Wisconsin, vivent
 			</div>
 
 		</div>
-		
+
 	</header>
 
 
