changement avant suppression

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 						<div class="col-md-12">
 
-							<img class="image-loup-intro" src="https://lehurlementdesloups.files.wordpress.com/2013/08/4.jpg">
+							<img class="image-loup-intro pull-left" width="auto" height="300" src="https://lehurlementdesloups.files.wordpress.com/2013/08/4.jpg">
 
 							<!-- introduction des loups -->
 
