--- a/page-type-loup.html
+++ b/page-type-loup.html
@@ -7,48 +7,79 @@
   <link rel="stylesheet" type="text/css" href="./css/pagetype.css">
   <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css">
   <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>page typel loup</title>
 </head>
-<body>
-<div class="container espace-navbar">
-
+<div class="container espace-navbar"> <!-- Debut barre de navigation -->
   <nav class="navbar navbar-inverse navbar-fixed-top">
-
     <div class="container">
-
-        <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-
-              <span class="sr-only">Toggle navigation</span>
-
-              <span class="icon-bar"></span>
-
-              <span class="icon-bar"></span>
-
-              <span class="icon-bar"></span>
-
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
         </button>
+        <a class="navbar-brand" href="#">Les loups dans le monde</a>
+      </div>
 
-            <a class="navbar-brand" href="#">Les loups dans le monde</a>
-
-        </div>
-
-        <div id="navbar" class="collapse navbar-collapse">
-
-            <ul class="nav navbar-nav">
-
-              <li><a href="#">Home</a></li>
-
-              <li><a href="#intro">Introduction</a></li> <!-- id="intro" -->
-
-              <li><a href="#about">A propos</a></li> <!-- id="about" -->
-
-              <li><a href="#contacter">Contact</a></li> <!-- id="contacter" -->
-
+      <div id="navbar" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li><a href="#">Home</a></li>
+          <li><a href="#intro">Introduction</a></li> <!-- id="intro" -->
+          <li><a href="#about">A propos</a></li> <!-- id="about" -->
+          <li><a href="#contacter">Contact</a></li> <!-- id="contacter" -->
         </ul>
+      </div><!--/.nav-collapse -->
+    </div>
+  </nav>
+</div>
+</head>
 
+<body>
+  <div class="container">
+    <div class="col-md-8 col-md-offset-2 ">
+      <h2>Carousel Example</h2>
+      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+          <li data-target="#myCarousel" data-slide-to="1"></li>
+          <li data-target="#myCarousel" data-slide-to="2"></li>
+          <li data-target="#myCarousel" data-slide-to="3"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner">
+          <div class="item active">
+          <img src="./image/occidentalis/loup1.jpg" alt="Loup occidentalis" width="100%" height="400"/>
+          </div>
+
+          <div class="item">
+            <img src="./image/occidentalis/loup2.JPG" alt="loup occidentalis" width="100%" height="400"/>
+          </div>
+
+          <div class="item">
+            <img src="./image/occidentalis/loup3.jpg" alt="loup occidentalis" width="100%" height="400"/>
+          </div>
         </div>
+        <div class="item">
+          <img src="./image/occidentalis/loup4.jpg" alt="loup occidentalis" width="100%" height="400"/>
+        </div>
+      </div>
 
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+</div>
 </body>
 </html>
