--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 						<div class="col-md-6 col-md-push-3">
 
-							<h1 class="page-header page-header">Les loups</h1>
+							<h1 class="page-header text-center page-header">Les loups</h1>
 
 						</div>
 
@@ -88,25 +88,23 @@
 
 						<div class="col-md-12">
 
-							<img class="image-loup-intro pull-left" width="auto" height="300" src="https://lehurlementdesloups.files.wordpress.com/2013/08/4.jpg">
+							<img class="image-loup-intro pull-left" width="auto" height="280" src="https://lehurlementdesloups.files.wordpress.com/2013/08/4.jpg">
 
 							<!-- introduction des loups -->
 
 							<h2 class="text-center text-justify intro">Introduction</h2>
 
-							<p class="text-center text-justify intro">Le loup commun varie du noir au blanc avec toute la gamme des intermédiaires gris, fauve et roux.
+							<p class="text-center text-justify intro"><!-- Le loup commun varie du noir au blanc avec toute la gamme des intermédiaires gris, fauve et roux.
 
 Il est le plus grand des canidés sauvages, famille zoologique qui regroupe entre autres les chacals, le coyote, les renards, le dingo et les chiens (15 genres et 33 espèces). <br><br>
 
 C’est une espèce qui présente une importante distribution géographique : on la retrouve sur tout l’Hémisphère Nord depuis la péninsule arabique jusque dans l’arctique, sous des climats tempérés où très froids, aussi bien dans les toundras et steppes que dans les taïgas et les régions désertiques. Sa taille, son poids et certains aspects morphologiques peuvent, de ce fait, varier fortement du nord au sud de son aire de répartition. Le fait de côtoyer des environnements très variés a ainsi entraîné des adaptations morphologiques et physiques spécifiques : gabarit, couleur du pelage, dimensions des appendices.<br>
-A 75° de latitude nord sur l’île d’Ellesmere, Canis lupus arctos atteint le poids de 65kg voire 70kg pour les plus gros mâles alors que plus au sud, en Arabie, Canis lupus arabs ne pèse que 14 à 25kg selon les individus.<br><br>
+A 75° de latitude nord sur l’île d’Ellesmere, Canis lupus arctos atteint le poids de 65kg voire 70kg pour les plus gros mâles alors que plus au sud, en Arabie, Canis lupus arabs ne pèse que 14 à 25kg selon les individus.</p> -->
 
-Il y a de nos jours environ 2000 loups en Espagne, principalement dans les provinces de Castille et Léon, Zamora, les Asturies et les Monts Cantabriques. Il y a entre 200 et 300 dans le nord du Portugal. En Italie, une population de 800 / 1000 loups subsiste du nord au sud de la « botte », allant du Piémont jusqu’en Calabre, pays traversé par la chaîne montagneuse des Apennins. Des populations de loups existent dans tous les pays d’Europe centrale. Actuellement on note environ 3000 loups en Roumanie, 600 / 700 en Pologne, 800 à 1000 en Bulgarie et moins de 300 en Grèce.<br>
-C’est l’ex-URSS qui abriterait le plus grand nombre de loups. Il y en aurait actuellement plus de cent mille dans cet ensemble de pays, où cependant ils ont été beaucoup chassés. Vu la superficie couverte par la population lupine et les moyens sur le terrain, il est évident qu’il est difficile de fournir une estimation réelle des effectifs de loups.<br>
-En Finlande, plus précisément en Laponie finlandaise limitrophe de la Russie, on enregistre des fluctuations de populations chez ces prédateurs, ils seraient environ 150.<br>
-En Turquie, en Iran, en Afghanistan, les loups sont très nombreux, de même qu’en Chine et en Mongolie extérieure. Il y a encore des loups en Israël, Arabie Saoudite et au Groenland où subsistent des loups, mais en petit nombre.<br>
-Aux Etats-Unis dans les états du Michigan, du Minnesota et du Wisconsin, vivent près de 3500 loups (Minnesota 3000, Michigan 180, Wisconsin 200). Le Canada fait partie des grands réservoirs à loups de la planète. Les derniers recensements font ressortir une population se situant entre 60 000 et 70 000 pour l’Amérique du Nord. Suivant les sources scientifiques, il y aurait entre 200 000 et 300 000 loups sur la planète, mais uniquement dans l’hémisphère nord pour « Canis lupus ».</p>
+Le loup est un des animaux terrestres les plus répandus au monde .Son aire de distribution originelle recouvrait tout l’hémisphère Nord à partir du 15e degré de latitude (il atteint le Sud de l’Arabie, l’Asie méridionale et le Sud du Mexique). Le loup occupe des habitats très variés, de la toundra au désert en passant par les montagnes, pourvu que l’offre en nourriture soit suffisante. Le loup peut s’approcher de l’homme si l’offre en nourriture l’y incite. Les «loups spaghetti» des banlieues de Rome, qui se nourrissent des restes trouvés dans les décharges, sont devenus célèbres.<br><br>
 
+Au cours des siècles, les loups se sont adaptés aux habitats les plus divers. Aujourd’hui, tous les loups ne se ressemblent pas. Les biologistes ont distingué différentes sous-espèces. Le loup mesure 1 à 1,5 m de longueur sans la queue, longue de 30 à50 cm.La hauteur au garrot est de 60 à 80 cm, parfois même un peu plus. En comparaison, un berger allemand mesure 55 à 65 cm au garrot.
+La couleur du pelage du loup varie beaucoup. Il existe des loups blancs, noirs,gris et multicolores. La coloration peut varier très fortement non seulement d’une sous-espèce à l’autre mais aussi d’un individu à l’autre. Il arrive ainsi qu’une même portée comprenne des louveteaux blancs, noirs et gris. En Italie et en France, le pelage des loups est le plus souvent un mélange de beige, de gris, de noir et de brun-jaune.</p>
 						</div>
 
 					</div>
@@ -118,7 +116,6 @@ Aux Etats-Unis dans les états du Michigan, du Minnesota et du Wisconsin, vivent
 		</div>
 
 	</header>
-
 
 
 
