ajout photo, texte lien de parenté, texte milieu vital

--- a/index.html
+++ b/index.html
@@ -94,17 +94,48 @@
 
 							<h2 class="text-center text-justify intro">Introduction</h2>
 
-							<p class="text-center text-justify intro"><!-- Le loup commun varie du noir au blanc avec toute la gamme des intermédiaires gris, fauve et roux.
-
-Il est le plus grand des canidés sauvages, famille zoologique qui regroupe entre autres les chacals, le coyote, les renards, le dingo et les chiens (15 genres et 33 espèces). <br><br>
-
-C’est une espèce qui présente une importante distribution géographique : on la retrouve sur tout l’Hémisphère Nord depuis la péninsule arabique jusque dans l’arctique, sous des climats tempérés où très froids, aussi bien dans les toundras et steppes que dans les taïgas et les régions désertiques. Sa taille, son poids et certains aspects morphologiques peuvent, de ce fait, varier fortement du nord au sud de son aire de répartition. Le fait de côtoyer des environnements très variés a ainsi entraîné des adaptations morphologiques et physiques spécifiques : gabarit, couleur du pelage, dimensions des appendices.<br>
-A 75° de latitude nord sur l’île d’Ellesmere, Canis lupus arctos atteint le poids de 65kg voire 70kg pour les plus gros mâles alors que plus au sud, en Arabie, Canis lupus arabs ne pèse que 14 à 25kg selon les individus.</p> -->
+							<p class="text-center text-justify intro">
 
 Le loup est un des animaux terrestres les plus répandus au monde .Son aire de distribution originelle recouvrait tout l’hémisphère Nord à partir du 15e degré de latitude (il atteint le Sud de l’Arabie, l’Asie méridionale et le Sud du Mexique). Le loup occupe des habitats très variés, de la toundra au désert en passant par les montagnes, pourvu que l’offre en nourriture soit suffisante. Le loup peut s’approcher de l’homme si l’offre en nourriture l’y incite. Les «loups spaghetti» des banlieues de Rome, qui se nourrissent des restes trouvés dans les décharges, sont devenus célèbres.<br><br>
 
 Au cours des siècles, les loups se sont adaptés aux habitats les plus divers. Aujourd’hui, tous les loups ne se ressemblent pas. Les biologistes ont distingué différentes sous-espèces. Le loup mesure 1 à 1,5 m de longueur sans la queue, longue de 30 à50 cm.La hauteur au garrot est de 60 à 80 cm, parfois même un peu plus. En comparaison, un berger allemand mesure 55 à 65 cm au garrot.
-La couleur du pelage du loup varie beaucoup. Il existe des loups blancs, noirs,gris et multicolores. La coloration peut varier très fortement non seulement d’une sous-espèce à l’autre mais aussi d’un individu à l’autre. Il arrive ainsi qu’une même portée comprenne des louveteaux blancs, noirs et gris. En Italie et en France, le pelage des loups est le plus souvent un mélange de beige, de gris, de noir et de brun-jaune.</p>
+La couleur du pelage du loup varie beaucoup. Il existe des loups blancs, noirs,gris et multicolores. La coloration peut varier très fortement non seulement d’une sous-espèce à l’autre mais aussi d’un individu à l’autre. Il arrive ainsi qu’une même portée comprenne des louveteaux blancs, noirs et gris. En Italie et en France, le pelage des loups est le plus souvent un mélange de beige, de gris, de noir et de brun-jaune.
+							</p>
+
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="col-md-12">
+
+							<h2 class="text-center text-justify intro">Liens de parenté</h2>
+
+							<p class="text-center text-justify intro">
+
+								Le loup fait partie des carnivores comme les chats, les martres et les ours, par exemple. C’est un canidé comme le chien, le renard, le lycaon (aussi nommé le loup d’Ethiopie),le chacal et d’autres espèces. Son nom scientifique est Canis lupus.On distingue aujourd’hui quelque 15 sous-espèces de loup. Les spécialistes ne sont pas tous d’accord avec cette subdivision. Le loup est l’ancêtre commun  de tous les chiens! En fait, le chien est une sous-espèce du loup. Les témoignages les plus anciens de la présence du chien datent d’environ 15’000ans. Aujourd’hui, il existe plus de 300 races de chiens avec une diversité énorme de tailles et de formes. A partir du loup, on a sélectionné des races de chiens aussi diverses que le pinscher ou le bouledogue.
+
+							</p>
+
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="col-md-12">
+
+							<img class="image-loup-vital pull-right" width="auto" height="280" src="meute-de-loups.jpg">
+
+							<h2 class="text-center text-justify intro">Milieu Vital</h2>
+
+							<p class="text-center text-justify intro">
+								
+								Une meute de loups occupe un territoire de taille très variable, selon l’offre en nourriture. En Amérique, on a mesuré des territoires de 50 à 1800 km2 (à titre de comparaison,le canton du Valais s’étend sur 5’224 km2). Dans les Abruzzes (Italie), les meutes de loups occupent des territoires de 120 à 200 km2, dans le Mercantour(France) de 200 km2. Des loups solitaires se déplacent et vivent dans les espaces séparant ces territoires.Un habitat favorable au loup comprendra plusieurs refuges où les  animaux peuvent demeurer au calme. Le territoire est défendu contre les intrus, qu’il s’agisse de congénères ou d’autres prédateurs. Le hurlement permet de marquer le territoire, ce qui désamorce les conflits.
+
+							</p>
+
 						</div>
 
 					</div>
