modification du titre principal

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 						<div class="col-md-6 col-md-push-3">
 
-							<h1 class="page-header text-center page-header">Les loups</h1>
+							<h1 class="page-header text-center page-header">Les loups dans le monde</h1>
 
 						</div>
 
@@ -133,6 +133,23 @@ La couleur du pelage du loup varie beaucoup. Il existe des loups blancs, noirs,g
 							<p class="text-center text-justify intro">
 								
 								Une meute de loups occupe un territoire de taille très variable, selon l’offre en nourriture. En Amérique, on a mesuré des territoires de 50 à 1800 km2 (à titre de comparaison,le canton du Valais s’étend sur 5’224 km2). Dans les Abruzzes (Italie), les meutes de loups occupent des territoires de 120 à 200 km2, dans le Mercantour(France) de 200 km2. Des loups solitaires se déplacent et vivent dans les espaces séparant ces territoires.Un habitat favorable au loup comprendra plusieurs refuges où les  animaux peuvent demeurer au calme. Le territoire est défendu contre les intrus, qu’il s’agisse de congénères ou d’autres prédateurs. Le hurlement permet de marquer le territoire, ce qui désamorce les conflits.
+
+							</p>
+
+						</div>
+
+					</div>
+
+					<div class="row">
+
+						<div class="col-md-12">
+
+							<h2 class="text-center text-justify intro"> Régime alimentaire</h2>
+
+							<p class="text-center text-justify intro">
+								
+							Le loup est un carnivore et un charognard. Le spectre de ses proies s’étend de la souris à l’élan. Le menu du loup dépend avant tout des proies disponibles. En Europe, il chasse le plus souvent les cerfs, les chevreuils, les chamois, les mouflons et les jeunes sangliers. Parmi les animaux d’élevage, le loup chasse avant tout les moutons et les chèvres. Occasionnellement, les loups mangent aussi des oiseaux, des reptiles, des batraciens, des insectes et des fruits. Si les proies viennent à manquer, ils pourront aller quérir leur pitance dans les décharges. Le loup chasse seul ou en groupe. Il s’efforce d’approcher au plus près de sa proie sans être repéré. Dès que celle-ci s’enfuit, une course-poursuite s’engage, parfois sur des centaines de mètres. Le loup peut atteindre une vitesse de 45 à 50 km/h.<br>
+							La mise à mort de proies de taille moyenne comme les chevreuils ou les moutons, est brutale. Le loup mord sa victime au cou ou à la nuque, en pleine course, ce qui provoque un arrêt cardiaque ou une rupture de la nuque. Le loup a besoin de 4 kg de viande par jour, ce qui équivaut à environ 25 cerfs par année. Le loup dévore ses proies en totalité, poils et os compris. Une étude menée en Amérique a montré que 10% seulement des proies pourchassées sont rattrapées par le loup,et que la moitié de celles-ci sont finalement mises à mort avec succès. La chasse peut s’avérer périlleuse pour le loup, qui n’hésitera pas, à l’occasion, à chiper une proie abattue par un prédateur de taille inférieure.
 
 							</p>
 
