--- a/page-type-loup.html
+++ b/page-type-loup.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="./css/pagetype.css">
   <link rel="stylesheet" type="text/css" href="font-awesome-4.7.0/css/font-awesome.css">
   <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="./css/pagetype.css">
   <title>page typel loup</title>
 </head>
 <div class="container espace-navbar"> <!-- Debut barre de navigation -->
@@ -39,8 +37,8 @@
 
 <body>
   <div class="container">
-    <div class="col-md-8 col-md-offset-2 ">
-      <h2>Carousel Example</h2>
+    <div class="col-md-8 col-md-offset-2">
+      <h2 class="text-center text-capitalize bg-danger font-titre border">le canis lupus occidentalis</h2>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -53,33 +51,36 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
           <div class="item active">
-          <img src="./image/occidentalis/loup1.jpg" alt="Loup occidentalis" width="100%" height="400"/>
+          <img class="img-responsive" src="./image/occidentalis/loup1.jpg" alt="Loup occidentalis">
           </div>
 
           <div class="item">
-            <img src="./image/occidentalis/loup2.JPG" alt="loup occidentalis" width="100%" height="400"/>
+          <img class="img-responsive" src="./image/occidentalis/loup2.JPG" alt="loup occidentalis">
           </div>
 
           <div class="item">
-            <img src="./image/occidentalis/loup3.jpg" alt="loup occidentalis" width="100%" height="400"/>
+          <img class="img-responsive" src="./image/occidentalis/loup3.jpg" alt="loup occidentalis">
+          </div>
+          <div class="item">
+          <img class="img-responsive" src="./image/occidentalis/loup4.jpg" alt="loup occidentalis">
           </div>
         </div>
-        <div class="item">
-          <img src="./image/occidentalis/loup4.jpg" alt="loup occidentalis" width="100%" height="400"/>
-        </div>
+
+        <!-- Left and right controls -->
+        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+          <span><i class="fa fa-chevron-left" aria-hidden="true"></i>
+          </span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" data-slide="next">
+          <span><i class="fa fa-chevron-right" aria-hidden="true"></i>
+          </span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
-
-      <!-- Left and right controls -->
-      <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#myCarousel" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
   </div>
-</div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 </html>
