--- a/page-type-loup.html
+++ b/page-type-loup.html
@@ -38,7 +38,7 @@
 <body>
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
-      <h2 class="text-center text-capitalize bg-danger font-titre border">salut julien comment tu va ??</h2>
+      <h2 class="text-center text-capitalize bg-danger font-titre border">le canis lupus occidentali</h2>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
