--- a/page-type-loup.html
+++ b/page-type-loup.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css?family=Gentium+Book+Basic" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="./bootstrap-3.3.7-dist/css/bootstrap.css">
   <link rel="stylesheet" type="text/css" href="./css/pagetype.css">
+
   <title>page typel loup</title>
 </head>
 <div class="container espace-navbar"> <!-- Debut barre de navigation -->
@@ -36,9 +37,9 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container"> <!-- debut du carousel -->
     <div class="col-md-8 col-md-offset-2">
-      <h2 class="text-center text-capitalize bg-danger font-titre border">le canis lupus occidentali</h2>
+      <h2 class="text-center text-capitalize font-titre border">le canis lupus occidentali</h2>
       <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
