Ajout des élements et du style bootstrap panel sur un listing des comportements du loup

--- a/index.html
+++ b/index.html
@@ -158,6 +158,129 @@
 
 					</div>
 
+					<div class="row">
+
+						<div class="col-md-12">
+
+							<h2 class="text-center text-justify intro">Comportement</h2>
+
+							<p class="text-center text-justify intro">
+								
+							Les loups vivent en petits groupes à la structure sociale bien établie, les meutes. Une meute rassemble de deux à vingt individus, en fonction de l’habitat et de l’offre en nourriture.Elle se compose le plus souvent d’un couple alpha, de ses petits et des jeunes de l’année précédente.Dans une meute de loups règne une hiérarchie claire. Le couple alpha se trouve au sommet, suivi du mâle béta. Viennent ensuite les loups et les louves plus jeunes. L’échelon inférieur est occupé par les jeunes d’un an et par les louveteaux de l’année. Le niveau hiérarchique détermine l’accès à la reproduction et l’ordre dans lequel les animaux se nourriront. Le port de la queue et les mimiques faciales expriment la position hiérarchique. Le couple alpha détermine les principales activités de la meute comme la chasse, la défense du territoire et les déplacements locaux. Sa tâche principale est cependant la régulation de la reproduction. La femelle alpha empêche les autres femelles de la meute de se reproduire. Seule la femelle alpha met des petits au monde. Les autres femelles participent cependant souvent à l’élevage des jeunes.Les jeunes s’éloignent de la meute à l’âge d’un ou deux ans, parfois de manière temporaire. Ils demeureront solitaires jusqu’à ce qu’ils aient trouvé un(e) partenaire avec qui fonder une nouvelle meute.Pour que la vie commune fonctionne dans la meute, les loups ont besoin d’un «langage» raffiné.<br><br>
+
+							Les animaux se comprennent grâce aux expressions faciales, au regard, à la posture, aux hurlements, aux gémissements, aux grondements et à l’odeur. Le loup dispose de six modes d’expression sonores:<br>
+
+							</p>
+
+							<div class="row">
+
+								<div class="col-md-10 col-md-push-1">
+
+									<div class=" panel panel-info">
+
+										<div class="panel-heading">
+
+											<h4 class="panel-title">Le gémissement</h4>
+
+										</div>
+
+										<div class="panel-body">
+
+											Peut traduire l’agitation, l’insatisfaction ou une légère irritation, ou exprimer une menace. Les louveteaux gémissent lorsqu’ils ont froid ou faim ou qu’ils sont seuls, les adultes lorsqu’ils appellent les petits à sortir du gîte ou lorsqu’ils apportent de la nourriture.
+
+										</div>
+
+									</div>
+
+									<div class=" panel panel-info">
+
+										<div class="panel-heading">
+
+											<h4 class="panel-title">L'aboiement</h4>
+
+										</div>
+
+										<div class="panel-body">
+
+											Annonce un péril.
+
+										</div>
+
+									</div>
+
+									<div class="panel panel-info">
+
+										<div class="panel-heading">
+
+											<h4 class="panel-title">Le grondement</h4>
+
+										</div>
+
+										<div class="panel-body">
+
+											Un signal menaçant.
+
+										</div>
+
+									</div>
+
+									<div class="panel panel-info">
+
+										<div class="panel-heading">
+
+											<h4 class="panel-title">Le cri</h4>
+
+										</div>
+
+										<div class="panel-body">
+
+											Le cri exprime la peur, en particulier chez un louveteau mordu pendant le jeu.
+
+										</div>
+
+									</div>
+
+									<div class="panel panel-info">
+
+										<div class="panel-heading">
+
+											<h4 class="panel-title">Le hurlement</h4>
+
+										</div>
+
+										<div class="panel-body">
+
+											Participe à la constitution de la meute et permet la communication à grande distance, lorsqu’un jeune ou un individu de rang supérieur est hors de vue.
+
+										</div>
+
+									</div>
+
+									<div class="panel panel-info">
+
+										<div class="panel-heading">
+
+											<h4 class="panel-title">Les émissions non vocales, comme le claquement des mâchoires</h4>
+
+										</div>
+
+									</div>
+
+								</div>
+
+							</div>
+
+							<p class="text-center text-justify intro">
+								
+							Pourquoi le loup a-t-il développé un langage aussi sophistiqué?<br>
+							La plupart des canidés, à l’image du chacal ou du renard, chassent de petites proies qu’ils peuvent maîtriser seuls.Mais le loup s’en prend parfois à des proies plus grandes que lui, dont il ne peut venir à bout qu’à l’aide de congénères. La chasse en meute et la vie sociale nécessitent une communication claire entre les individus.
+
+							</p>
+
+						</div>
+
+					</div>
+
 				</div>
 
 			</div>
