modification des css et ajouts du img-thumbnail sur les photos

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 						<div class="col-md-12">
 
-							<img class="image-loup-intro pull-left" width="auto" height="280" src="https://lehurlementdesloups.files.wordpress.com/2013/08/4.jpg">
+							<img class="image-loup-intro pull-left img-thumbnail" width="498" height="auto" src="https://lehurlementdesloups.files.wordpress.com/2013/08/4.jpg">
 
 							<!-- introduction des loups -->
 
@@ -107,7 +107,21 @@
 
 					</div>
 
-					<div class="row">
+				</div>
+
+			</div>
+
+		</div>
+
+	</header>
+
+	<div class="container">
+
+		<div class="row">
+
+			<div class="col-md-12">
+
+				<div class="row">
 
 						<div class="col-md-12">
 
@@ -121,13 +135,13 @@
 
 						</div>
 
-					</div>
+				</div>
 
-					<div class="row">
+				<div class="row">
 
 						<div class="col-md-12">
 
-							<img class="image-loup-vital pull-right" width="auto" height="280" src="meute-de-loups.jpg">
+							<img class="image-loup-vital pull-right img-thumbnail" width="498" height="auto" src="meute-de-loups.jpg">
 
 							<h2 class="text-center text-justify intro">Milieu Vital</h2>
 
@@ -139,9 +153,9 @@
 
 						</div>
 
-					</div>
+				</div>
 
-					<div class="row">
+				<div class="row">
 
 						<div class="col-md-12">
 
@@ -156,9 +170,9 @@
 
 						</div>
 
-					</div>
+				</div>
 
-					<div class="row">
+				<div class="row">
 
 						<div class="col-md-12">
 
@@ -279,15 +293,14 @@
 
 						</div>
 
-					</div>
-
 				</div>
 
 			</div>
 
 		</div>
 
-	</header>
+	</div>
+
 
 
 
