ajout du chapitre de distribution du loup ajout de photos
un tableau doit être fait

--- a/index.html
+++ b/index.html
@@ -295,6 +295,63 @@
 
 				</div>
 
+				<div class="row">
+
+					<div class="col-md-12">
+
+						<h2 class="text-center text-justify intro">Reproduction</h2>
+
+						<p class="text-center text-justify intro">
+
+							La période de l’accouplement du loup survient entre janvier et mars, plus tôt dans le sud que dans le nord. Le couple alpha partage beaucoup de temps. Les femelles sont fécondes une fois par année. Après l’accouplement, la femelle creuse un terrier dans lequel elle élèvera ses petits. Une gestation de 61 à 63 jours précède la mise bas d’une portée de 3 à 8 louveteaux. Nés sourds et aveugles, pesant une livre, les petits resteront durant 8 à 10 semaines dans le gîte protecteur. Une fois qu’ils ont ouvert leurs yeux bleue six semaines, ils sont nourris avec de la viande par tous les membres du clan. Une fois qu’ils se tiennent sur leurs pattes, ils commencent à explorer les alentours du terrier et à jouer à la lutte. Cette période d’imprégnation leur enseigne leur futur rang social dans la meute. Les jeunes grandissent vite, et ils devront être capables de suivre la meute dans ses déplacements et ses chasses à leur premier hiver. Dès l’âge de dix mois, ils commencent à participer à la chasse. 
+
+						</p>
+
+					</div>
+
+				</div>
+
+				<div class="row">
+
+					<div class="col-md-12">
+
+						<h2 class="text-center text-justify intro">Les loups dans le monde</h2>
+
+						<p class="text-center text-justify intro">
+
+							Le loup était autrefois le mammifère le plus répendu au monde. Il était présent dans tout l’hémisphère nord à partir du 15e degré de latitude. Au nord du 15e degré de latitude, il était présent dans tout l’hémisphère Nord. Aujourd’hui, il a disparu d’une partie de son aire de répartition originelle – surtout en Europe et aux USA. La principale cause de régression est la persécution par l’homme.
+
+						</p>
+
+						<h3 class="text-center text-justify intro">Distribution du loup</h3>
+
+						<p class="text-center text-justify intro">
+
+							<span class="texte-rouge">Rouge</span> : distribution actuelle (très grossière).<br>
+							<span class="texte-jaune">Jaune</span> : régions d’où le loup a disparu.
+
+						</p>
+
+						<div class="text-center">
+
+							<img class="img-thumbnail" width="498" height="auto" src="distribution-monde-loup.jpg">
+
+						</div>
+
+						<h3 class="text-center text-justify intro">Les loups en Europe</h3>
+
+						<p class="text-center text-justify intro">
+
+							Autrefois, le loup était répandu dans toute l’Europe. Il a été exterminé en Europe centrale et n’a survécu qu’au sud et à l’est de l’Europe. Depuis les années 1970, les opinions sur le loup ont changé dans de nombreux pays européens. Des périodes d’interdiction de chasse et des mesures de protection ont été introduites.<br>
+							Aujourd’hui le loup est protégé en Europe par des accords internationaux.Les loups reviennent en Europe centrale depuis l’ Italie, les Balkans et les Carpates.<br>
+							Le loup dans les pays d’Europe ayant ratifié la conventien de Berne (d’après Salvatori & Linnell, 2005)
+
+						</p>
+
+					</div>
+
+				</div>
+
 			</div>
 
 		</div>
